[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/bugs/ballThrowing/bugBall.gd" type="Script" id=1]
[ext_resource path="res://scenes/bugs/ballThrowing/ballTexture.jpg" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.2
bounce = 0.6

[sub_resource type="SphereShape" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 2 )

[sub_resource type="SphereMesh" id=4]
radial_segments = 8
rings = 4

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_color = Color( 0, 0.243137, 0.0392157, 1 )

[sub_resource type="ArrayMesh" id=6]
surfaces/0 = {
"aabb": AABB( -1.0495, -1.09511, -1.0495, 2.099, 2.19177, 2.09263 ),
"array_data": PoolByteArray( 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 89, 0, 167, 127, 0, 48, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 0, 0, 129, 127, 0, 52, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 167, 0, 167, 127, 0, 54, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 129, 0, 0, 127, 0, 56, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 167, 0, 89, 127, 0, 57, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 0, 0, 127, 127, 0, 58, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 89, 0, 89, 127, 0, 59, 0, 0, 56, 45, 97, 60, 7, 95, 140, 63, 90, 147, 177, 60, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 0, 42, 166, 133, 60, 241, 67, 102, 63, 90, 142, 32, 63, 0, 102, 74, 0, 127, 0, 0, 127, 0, 0, 102, 50, 90, 33, 224, 62, 138, 23, 102, 63, 21, 76, 232, 62, 51, 102, 51, 0, 89, 0, 167, 127, 0, 48, 102, 50, 26, 95, 33, 63, 138, 23, 102, 63, 209, 203, 56, 60, 74, 102, 0, 0, 0, 0, 129, 127, 0, 52, 102, 50, 21, 76, 232, 62, 138, 23, 102, 63, 90, 33, 224, 190, 51, 102, 205, 0, 167, 0, 167, 127, 0, 54, 102, 50, 207, 203, 56, 60, 138, 23, 102, 63, 26, 95, 33, 191, 0, 102, 182, 0, 129, 0, 0, 127, 0, 56, 102, 50, 90, 33, 224, 190, 138, 23, 102, 63, 21, 76, 232, 190, 205, 102, 205, 0, 167, 0, 89, 127, 0, 57, 102, 50, 26, 95, 33, 191, 138, 23, 102, 63, 209, 203, 56, 188, 182, 102, 0, 0, 0, 0, 127, 127, 0, 58, 102, 50, 21, 76, 232, 190, 138, 23, 102, 63, 90, 33, 224, 62, 205, 102, 51, 0, 89, 0, 89, 127, 0, 59, 102, 50, 42, 166, 133, 188, 241, 67, 102, 63, 90, 142, 32, 63, 0, 102, 74, 0, 127, 0, 0, 127, 0, 60, 102, 50, 47, 235, 8, 61, 94, 36, 183, 62, 161, 16, 132, 63, 0, 39, 120, 0, 127, 0, 0, 127, 0, 0, 102, 54, 161, 26, 57, 63, 26, 133, 183, 62, 97, 67, 62, 63, 85, 39, 85, 0, 89, 0, 167, 127, 0, 48, 102, 54, 93, 182, 132, 63, 26, 133, 183, 62, 75, 122, 105, 60, 120, 39, 0, 0, 0, 0, 129, 127, 0, 52, 102, 54, 97, 67, 62, 63, 26, 133, 183, 62, 161, 26, 57, 191, 85, 39, 171, 0, 167, 0, 167, 127, 0, 54, 102, 54, 71, 122, 105, 60, 26, 133, 183, 62, 93, 182, 132, 191, 0, 39, 136, 0, 129, 0, 0, 127, 0, 56, 102, 54, 161, 26, 57, 191, 26, 133, 183, 62, 97, 67, 62, 191, 171, 39, 171, 0, 167, 0, 89, 127, 0, 57, 102, 54, 93, 182, 132, 191, 26, 133, 183, 62, 75, 122, 105, 188, 136, 39, 0, 0, 0, 0, 127, 127, 0, 58, 102, 54, 97, 67, 62, 191, 26, 133, 183, 62, 161, 26, 57, 63, 171, 39, 85, 0, 89, 0, 89, 127, 0, 59, 102, 54, 47, 235, 8, 189, 94, 36, 183, 62, 161, 16, 132, 63, 0, 39, 120, 0, 127, 0, 0, 127, 0, 60, 102, 54, 23, 54, 28, 61, 92, 114, 162, 190, 61, 133, 133, 63, 0, 217, 120, 0, 127, 0, 0, 127, 0, 0, 204, 56, 167, 16, 59, 63, 201, 208, 161, 190, 20, 229, 64, 63, 85, 217, 85, 0, 89, 0, 167, 127, 0, 48, 204, 56, 11, 86, 134, 63, 201, 208, 161, 190, 189, 233, 131, 60, 120, 217, 0, 0, 0, 0, 129, 127, 0, 52, 204, 56, 20, 229, 64, 63, 201, 208, 161, 190, 167, 16, 59, 191, 85, 217, 171, 0, 167, 0, 167, 127, 0, 54, 204, 56, 189, 233, 131, 60, 201, 208, 161, 190, 11, 86, 134, 191, 0, 217, 136, 0, 129, 0, 0, 127, 0, 56, 204, 56, 167, 16, 59, 191, 201, 208, 161, 190, 20, 229, 64, 191, 171, 217, 171, 0, 167, 0, 89, 127, 0, 57, 204, 56, 11, 86, 134, 191, 201, 208, 161, 190, 189, 233, 131, 188, 136, 217, 0, 0, 0, 0, 127, 127, 0, 58, 204, 56, 20, 229, 64, 191, 201, 208, 161, 190, 167, 16, 59, 63, 171, 217, 85, 0, 89, 0, 89, 127, 0, 59, 204, 56, 24, 54, 28, 189, 92, 114, 162, 190, 61, 133, 133, 63, 0, 217, 120, 0, 127, 0, 0, 127, 0, 60, 204, 56, 219, 25, 241, 60, 133, 120, 95, 191, 166, 169, 40, 63, 0, 154, 74, 0, 127, 0, 0, 127, 0, 0, 102, 58, 70, 15, 233, 62, 175, 248, 94, 191, 175, 129, 247, 62, 51, 154, 51, 0, 89, 0, 167, 127, 0, 48, 102, 58, 185, 228, 41, 63, 145, 247, 94, 191, 145, 96, 165, 60, 74, 154, 0, 0, 0, 0, 129, 127, 0, 52, 102, 58, 176, 129, 247, 62, 175, 248, 94, 191, 70, 15, 233, 190, 51, 154, 205, 0, 167, 0, 167, 127, 0, 54, 102, 58, 147, 96, 165, 60, 145, 247, 94, 191, 185, 228, 41, 191, 0, 154, 182, 0, 129, 0, 0, 127, 0, 56, 102, 58, 70, 15, 233, 190, 175, 248, 94, 191, 175, 129, 247, 190, 205, 154, 205, 0, 167, 0, 89, 127, 0, 57, 102, 58, 185, 228, 41, 191, 145, 247, 94, 191, 145, 96, 165, 188, 182, 154, 0, 0, 0, 0, 127, 127, 0, 58, 102, 58, 176, 129, 247, 190, 175, 248, 94, 191, 70, 15, 233, 62, 205, 154, 51, 0, 89, 0, 89, 127, 0, 59, 102, 58, 195, 25, 235, 188, 173, 202, 95, 191, 83, 114, 40, 63, 0, 154, 74, 0, 127, 0, 0, 127, 0, 60, 102, 58, 59, 4, 80, 60, 52, 19, 140, 191, 31, 25, 251, 60, 0, 129, 0, 0, 127, 0, 0, 127, 0, 0, 0, 60, 122, 33, 251, 60, 155, 19, 140, 191, 37, 92, 78, 60, 0, 129, 0, 0, 89, 0, 167, 127, 0, 48, 0, 60, 136, 37, 253, 60, 108, 44, 140, 191, 117, 194, 213, 184, 0, 129, 0, 0, 0, 0, 129, 127, 0, 52, 0, 60, 35, 92, 78, 60, 155, 19, 140, 191, 120, 33, 251, 188, 0, 129, 0, 0, 167, 0, 167, 127, 0, 54, 0, 60, 117, 194, 213, 184, 108, 44, 140, 191, 136, 37, 253, 188, 0, 129, 0, 0, 129, 0, 0, 127, 0, 56, 0, 60, 122, 33, 251, 188, 155, 19, 140, 191, 37, 92, 78, 188, 0, 129, 0, 0, 167, 0, 89, 127, 0, 57, 0, 60, 135, 37, 253, 188, 108, 44, 140, 191, 117, 194, 213, 56, 0, 129, 0, 0, 0, 0, 127, 127, 0, 58, 0, 60, 35, 92, 78, 188, 155, 19, 140, 191, 120, 33, 251, 60, 0, 129, 0, 0, 89, 0, 89, 127, 0, 59, 0, 60, 210, 187, 27, 139, 108, 44, 140, 191, 144, 37, 253, 60, 0, 129, 0, 0, 127, 0, 0, 127, 0, 60, 0, 60 ),
"array_index_data": PoolByteArray( 0, 0, 9, 0, 1, 0, 1, 0, 9, 0, 10, 0, 1, 0, 10, 0, 2, 0, 2, 0, 10, 0, 11, 0, 2, 0, 11, 0, 3, 0, 3, 0, 11, 0, 12, 0, 3, 0, 12, 0, 4, 0, 4, 0, 12, 0, 13, 0, 4, 0, 13, 0, 5, 0, 5, 0, 13, 0, 14, 0, 5, 0, 14, 0, 6, 0, 6, 0, 14, 0, 15, 0, 6, 0, 15, 0, 7, 0, 7, 0, 15, 0, 16, 0, 7, 0, 16, 0, 8, 0, 8, 0, 16, 0, 17, 0, 9, 0, 18, 0, 10, 0, 10, 0, 18, 0, 19, 0, 10, 0, 19, 0, 11, 0, 11, 0, 19, 0, 20, 0, 11, 0, 20, 0, 12, 0, 12, 0, 20, 0, 21, 0, 12, 0, 21, 0, 13, 0, 13, 0, 21, 0, 22, 0, 13, 0, 22, 0, 14, 0, 14, 0, 22, 0, 23, 0, 14, 0, 23, 0, 15, 0, 15, 0, 23, 0, 24, 0, 15, 0, 24, 0, 16, 0, 16, 0, 24, 0, 25, 0, 16, 0, 25, 0, 17, 0, 17, 0, 25, 0, 26, 0, 18, 0, 27, 0, 19, 0, 19, 0, 27, 0, 28, 0, 19, 0, 28, 0, 20, 0, 20, 0, 28, 0, 29, 0, 20, 0, 29, 0, 21, 0, 21, 0, 29, 0, 30, 0, 21, 0, 30, 0, 22, 0, 22, 0, 30, 0, 31, 0, 22, 0, 31, 0, 23, 0, 23, 0, 31, 0, 32, 0, 23, 0, 32, 0, 24, 0, 24, 0, 32, 0, 33, 0, 24, 0, 33, 0, 25, 0, 25, 0, 33, 0, 34, 0, 25, 0, 34, 0, 26, 0, 26, 0, 34, 0, 35, 0, 27, 0, 36, 0, 28, 0, 28, 0, 36, 0, 37, 0, 28, 0, 37, 0, 29, 0, 29, 0, 37, 0, 38, 0, 29, 0, 38, 0, 30, 0, 30, 0, 38, 0, 39, 0, 30, 0, 39, 0, 31, 0, 31, 0, 39, 0, 40, 0, 31, 0, 40, 0, 32, 0, 32, 0, 40, 0, 41, 0, 32, 0, 41, 0, 33, 0, 33, 0, 41, 0, 42, 0, 33, 0, 42, 0, 34, 0, 34, 0, 42, 0, 43, 0, 34, 0, 43, 0, 35, 0, 35, 0, 43, 0, 44, 0, 36, 0, 45, 0, 37, 0, 37, 0, 45, 0, 46, 0, 37, 0, 46, 0, 38, 0, 38, 0, 46, 0, 47, 0, 38, 0, 47, 0, 39, 0, 39, 0, 47, 0, 48, 0, 39, 0, 48, 0, 40, 0, 40, 0, 48, 0, 49, 0, 40, 0, 49, 0, 41, 0, 41, 0, 49, 0, 50, 0, 41, 0, 50, 0, 42, 0, 42, 0, 50, 0, 51, 0, 42, 0, 51, 0, 43, 0, 43, 0, 51, 0, 52, 0, 43, 0, 52, 0, 44, 0, 44, 0, 52, 0, 53, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 240,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 54
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.01, 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=8]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 2.6, 3 ),
"transitions": PoolRealArray( 1, 0.466516, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ), Vector3( 1.2, 1.2, 1.2 ), Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ), Vector3( 0.01, 0.01, 0.01 ) ]
}

[sub_resource type="SphereShape" id=9]
radius = 1.37535

[node name="bugBall" type="RigidBody"]
mass = 15.0
physics_material_override = SubResource( 1 )
gravity_scale = 3.0
can_sleep = false
script = ExtResource( 1 )
colPal = [ Color( 0.0901961, 0.517647, 0, 1 ), Color( 0.709804, 0, 0.466667, 1 ) ]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
material_override = SubResource( 5 )
mesh = SubResource( 6 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 7 )
anims/instFadeOut = SubResource( 8 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
